[package]
name = "aura"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
lazy_static = "1.5.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
webrtc = "0.17.1"
